Added ambulance waiting list API

--- a/apps/karunnyi-ambulance-ufe/webcomponent-content.yaml
+++ b/apps/karunnyi-ambulance-ufe/webcomponent-content.yaml
@@ -8,6 +8,10 @@ spec:
   attributes:
     - name: base-path
       value: /karunnyi-ambulance-wl/
+    - name: api-base
+      value: http://localhost:5001/api
+    - name: ambulance-id
+      value: bobulova
   displayRules:
     - allOf:
       - context-name: main-content
