--- a/components/version-developers/kustomization.yaml
+++ b/components/version-developers/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 images:
-- name: kxrunnyi/ambulance-ufe
-  newName: kxrunnyi/ambulance-ufe # {"$imagepolicy":  "wac-hospital:ambulance-ufe:name"}
+- name: karunnyi/ambulance-ufe
+  newName: karunnyi/ambulance-ufe # {"$imagepolicy":  "wac-hospital:ambulance-ufe:name"}
   newTag: main.20250317.1049 # {"$imagepolicy": "wac-hospital:ambulance-ufe:tag"}
-- name: kxrunnyi/ambulance-wl-webapi
-  newName: kxrunnyi/ambulance-wl-webapi # {"$imagepolicy":  "wac-hospital:ambulance-webapi:name"}
+- name: karunnyi/ambulance-wl-webapi
+  newName: karunnyi/ambulance-wl-webapi # {"$imagepolicy":  "wac-hospital:ambulance-webapi:name"}
   newTag: main # {"$imagepolicy": "wac-hospital:ambulance-webapi:tag"}
