--- a/clusters/localhost/prepare/kustomization.yaml
+++ b/clusters/localhost/prepare/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
 - namespace.yaml
 - ../../../infrastructure/polyfea
 - ../../../infrastructure/fluxcd
+- ../../../infrastructure/envoy-gateway
+
 
 components:
 - ../../../components/version-developers
