--- a/apps/karunnyi-ambulance-ufe/webcomponent-content.yaml
+++ b/apps/karunnyi-ambulance-ufe/webcomponent-content.yaml
@@ -9,7 +9,7 @@ spec:
     - name: base-path
       value: /karunnyi-ambulance-wl/
     - name: api-base
-      value: http://localhost:30001/api
+      value: /karunnyi-api
     - name: ambulance-id
       value: bobulova
   displayRules:
