--- a/components/version-release/kustomization.yaml
+++ b/components/version-release/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 images:
-- name: kxrunnyi/ambulance-ufe
-  newName: kxrunnyi/ambulance-ufe
+- name: karunnyi/ambulance-ufe
+  newName: karunnyi/ambulance-ufe
   newTag: 1.0.0
