--- a/infrastructure/envoy-gateway/gateway.yaml
+++ b/infrastructure/envoy-gateway/gateway.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   gatewayClassName: wac-hospital-gateway-class
   listeners:
+  - allowedRoutes:
+        namespaces:
+          from: All
   - name: http
     protocol: HTTP
     port: 80
