--- a/components/version-release/kustomization.yaml
+++ b/components/version-release/kustomization.yaml
@@ -4,3 +4,6 @@ images:
 - name: karunnyi/ambulance-ufe
   newName: karunnyi/ambulance-ufe
   newTag: 1.0.0
+- name: karunnyi/ambulance-wl-webapi
+  newName: karunnyi/ambulance-wl-webapi
+  newTag: 1.1.0
