Added cert-manager and TLS listener

--- a/clusters/localhost/prepare/kustomization.yaml
+++ b/clusters/localhost/prepare/kustomization.yaml
@@ -6,6 +6,8 @@ resources:
 - ../../../infrastructure/polyfea
 - ../../../infrastructure/fluxcd
 - ../../../infrastructure/envoy-gateway
+- ../../../infrastructure/cert-manager
+
 
 
 components:
