--- a/clusters/localhost/secrets/kustomization.yaml
+++ b/clusters/localhost/secrets/kustomization.yaml
@@ -19,4 +19,10 @@ secretGenerator:
     envs:
       - params/mongodb-auth.env
     options:
-     disableNameSuffixHash: true      
+        disableNameSuffixHash: true    
+  - name: oidc-client
+    type: Opaque
+    envs:
+      - params/oidc-client.env
+    options:
+        disableNameSuffixHash: true     
