--- a/clusters/localhost/install/kustomization.yaml
+++ b/clusters/localhost/install/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - ../../../apps/karunnyi-ambulance-ufe
 - ../../../apps/karunnyi-ambulance-webapi
 - ../../../apps/mongo-express
+- ../../../apps/http-echo
 
 patches:
 - path: patches/ambulance-webapi.service.yaml
